# sccluster

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: example_usage.py
figures/: design_philosophy.md  extract_pdf.py  pipeline_diagram.html  render_diagram.py
sccluster/: __init__.py  cli.py  clustering.py  dim_reduction.py  markers.py  pipeline.py  preprocessing.py  utils.py  visualization.py
