[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sccluster"
version = "1.0.0"
description = "Single-cell RNA-seq clustering pipeline integrating scVI deep learning, Leiden graph clustering, and Wilcoxon rank-sum test for marker gene identification."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "scCluster Team"}
]
keywords = [
    "single-cell",
    "scRNA-seq",
    "scVI",
    "clustering",
    "bioinformatics",
    "deep-learning",
    "leiden",
    "transcriptomics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "scanpy>=1.10.0",
    "scvi-tools>=1.1.0",
    "anndata>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "leidenalg>=0.10.0",
    "umap-learn>=0.5.0",
    "torch>=2.0.0",
    "pynndescent>=0.5.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
    "adjustText>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/JohnDe123/sccluster"
Repository = "https://github.com/JohnDe123/sccluster"
Issues = "https://github.com/JohnDe123/sccluster/issues"

[project.scripts]
sccluster = "sccluster.cli:main"

[tool.setuptools.packages.find]
include = ["sccluster*"]

[tool.setuptools.package-data]
sccluster = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
